style.css
body {
  margin: 0;
  font-family: Arial;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.top-section {
  margin-left: 10px;
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 40px;
  background-color: gray;
  color: white;
  height: 100px;
  width: 100%;
}

.head {
  margin-top: 20px;
  font-size: 20px;
  margin-bottom: 10px;
}

::placeholder {
  color: rgb(173, 173, 173);
}

input {
  height: 22px;
  font-size: 16px;
  border: 2px black solid;
  margin-right: 8px;
}

.submit-button {
  font-size: 18px;
  width: 100px;
  height: 27px;
  border: 1px black solid;
  border-radius: 3px;
  margin-top: 15px;
  margin-left: 820px;
}


/* Middle Section */
table { 
  width: 100%;  
  text-align: left;
}

table, th, td {
  border-collapse: collapse;
  border: 1px black solid;
  font-weight: lighter;
}

thead {
  background-color: lightgray;
}


th, td {
  padding-left: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.salary {
  text-align: right;
  padding-right: 10px;
}

.delete-box {
  text-align: center;
}

.delete-button {
  width: 80px;
}

.table2 {
  margin-top: -1px;
  height: 39.5px;
}

tr:nth-child(even) {background-color: rgb(234, 234, 234);}


/* Bottom Section */

.bottom-section {
  font-size: 20px;
  display: flex;
  justify-content: end;
  margin-top: 20px;
}

